--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ bitbucket_username: Tata-sh
 stackoverflow_id: 1577895
 twitter_username: 
 google_plus_id: 
-linkedin_username:Tatiana Shatilova
+linkedin_username: tatiana-shatilova-26009481
 angellist_username:
 medium_id:
 bitcoin_url:
