* style of social icons

--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ disqus_shortname: Tania
 # Social icons
 show_social_icons: true
 github_username: sufflavus
-bitbucket_username: Tata-sh
-stackoverflow_id: 1577895
+bitbucket_username: 
+stackoverflow_id: 
 twitter_username: 
 google_plus_id: 
 linkedin_username: tatiana-shatilova-26009481
