--- a/_config.yml
+++ b/_config.yml
@@ -72,3 +72,6 @@ kramdown:
 # http://jekyllrb.com/docs/permalinks/
 # http://joshualande.com/short-urls-jekyll/
 permalink: "/:title"
+
+gems:
+  - jekyll-gist
