--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ share_hackernews: false
 redcarpet:
   extensions: ["tables", "autolink", "strikethrough", "space_after_headers", "with_toc_data", "fenced_code_blocks"]
   
-highlighter: pygments
+highlighter: rouge
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
 permalink:    pretty
